# picoserve

./: .rusty-hook.toml  Cargo.toml  LICENSE.md  README.md
src/: content_type.rs  env.rs  extension.rs  index.rs  main.rs  mime.rs  response.rs
src/request/: get.rs  index.rs  mod.rs
