[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
categories = ["command-line-utilities"]
description = "Get setup with serving a directory quickly."
documentation = "https://github.com/vivian/picoserve"
edition = "2018"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["http server"]
license = "ISC"
name = "picoserve"
readme = "README.md"
repository = "https://github.com/vivian/picoserve.git"
version = "0.1.0"

[dev-dependencies]
rusty-hook = "0.11.2"
